@@ -1,8 +1,10 @@
-CHANGES.txt - 2011-02-14
+CHANGES.txt - 2011-02-16
 ------------------------
 
 CHANGES IN CUPS V1.5b1
 
+	- The scheduler did not always get the correct Kerberos username when
+	  authenticating (STR #3670)
 	- Added new cupsRasterOpenIO function and CUPS_RASTER_WRITE_PWG to the
 	  CUPS imaging library to support printing to IPP Everywhere raster
 	  printers.
